--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "kuna-api",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Node.js library to interact with Kuna API v3",
 	"main": "index.js",
 	"scripts": {
@@ -24,6 +24,7 @@
 	},
 	"homepage": "https://github.com/yegor-pelykh/KunaAPI#readme",
 	"devDependencies": {
+		"@types/node": "^12.6.8",
 		"chai": "^4.2.0",
 		"mocha": "^6.1.4",
 		"typescript": "^3.5.3"
